@startuml

title __LOGIC's Class Diagram__\n

namespace logic {
      class logic.GameLogic {
          - consecutiveGhosts : int
          - inGame : boolean
          - level : int
          - pacmanDead : boolean
          - pacmanStart : boolean
          - startTime : long
          - timer : Timer
          + GameLogic()
          + checkCollision()
          + doOneLoop()
          + keyPressed()
          + makeGameOver()
          + pauseGame()
          + restartApplication()
          + resumeGame()
          + endGame()
          + killPacman()
          + restartLevel()
          + update()
      }
      class logic.MainFrameLogic {
          + MainFrameLogic()
          + readHighScore()
          + registerFont()
          + writeHighScore()
      }
      class logic.MenuLogic {
          - mazesNumber : int
          + MenuLogic()
          + populateMazeStrings()
          + loadMazes()
      }
  

  logic.GameLogic o-- ui.GameMainFrame : frame
  logic.GameLogic o-- ui.GamePanel : gamePanel
  logic.GameLogic o-- structure.Maze : maze
  logic.GameLogic o-- sprites.Pacman : pacman
  logic.GameLogic o-- sprites.Ghost : ghosts
  logic.GameLogic o-- loops.GameLoop : timer.getActionListeners()
  logic.MainFrameLogic o-- ui.GameMainFrame : frame



@enduml
